--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 01:24:00 AM</p>
+    <p class="lastupdate">09/08/2020 01:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.0&#176;F</td>
+        <td class="data">48.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">35%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.639 inHg (-0.018)</td>
+        <td class="data">29.639 inHg (-0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">84.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="01:22:07 AM">
-            78.1</span>
+          <span title="01:28:45 AM">
+            77.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:22:07 AM" class="loval">
-            78.1</span>
+          <span title="01:28:45 AM" class="loval">
+            77.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          202
+          0<br/>
+          205
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="01:21:01 AM">
-            85.0</span>
+          <span title="01:27:01 AM">
+            84.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 10 hours, 37 minutes</td>
+      <td class="data">6 days, 10 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 10 hours, 37 minutes</td>
+      <td class="data">6 days, 10 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
